--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>YSChain</title>
+    <meta charset="utf-8">
+    <title>YSChain</title>
+    <link rel="shortcut icon" href=" /favicon.ico" />
 </head>
 <body>
     <h1>欢迎来到YSChain的网站！</h1>
