--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>YSChain</title>
-    <link rel="shortcut icon" href=" /favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
     <h1>欢迎来到YSChain的网站！</h1>
