--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-    <h1>欢迎来到YSChain的网站！</h1>
+    <h1>欢迎来到杨子坤的网站！</h1>
     <p>我的网站正在建立，联系方式：</p>
-    <p> Email: YSChain@163.com <br> QQ: 1312778474 <br> 真名: <font color="white">杨子坤</font> (刮刮乐) </p>
+    <p> Email: YSChain@163.com <br> QQ: 1312778474</p>
 </body>
 </html>
