--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>欢迎来到杨子坤的网站！</h1>
     <p>我的网站正在建立，联系方式：</p>
     <p> Email: YSChain@163.com <br> QQ: 1312778474</p>
+    <a href="./Formula.py">Python解方程_Alpha</a>
 </body>
 </html>
