--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>我的网站正在建立，联系方式：</p>
     <p> Email: YSChain@163.com <br> QQ: 1312778474</p>
     <a href="./CountDown.html">CountDown</a> <br>
+    <a href="./连点器.exe">连点器</a> <br>
     <a href="./Formula.py">Python解方程_Alpha</a>
 </body>
 </html>
