--- a/CountDown.html
+++ b/CountDown.html
@@ -25,7 +25,7 @@
 	</script>
 </head >
 <body onload="countTime()">
-	<div style="color:red;margin:0 auto">
+	<div style="color:red;text-align:center">
 		<span id="time"></span>
 	</div>
 </body>
