--- a/CountDown.html
+++ b/CountDown.html
@@ -25,7 +25,7 @@
 	</script>
 </head >
 <body onload="countTime()">
-	<div style="color:red;text-align:center">
+	<div style="color:red;text-align:center;z-index: 1;font-size: 5vw">
 		<span id="time"></span>
 	</div>
 </body>
