--- a/CountDown.html
+++ b/CountDown.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<title>倒计时</title>
 	<script type="text/javascript">
+		__version__= 1.1;
 		function tStr(str) {
 			var time=Math.floor(str);
 			if(time < 10) return "0"+time;
@@ -11,6 +12,7 @@
 		function countTime() {
 			//消息
 			var thing = "期末考";
+			document.getElementById("head").innerHTML=thing+" 倒计时<br>";
 			//截止时间
 			var str="2020/06/29 6:50:00";
 			//时间差
@@ -21,16 +23,17 @@
 			var d,h,m,s;
 			if (leftTime>=0) {
 				//将倒计时赋值到div中
-				document.getElementById("time").innerHTML = "距离 " + thing + " ["+str+"]还有:<br>" + Math.floor(leftTime/1000/60/60/24) + "天" + tStr(leftTime/1000/60/60%24) + "时" + tStr(leftTime/1000/60%60) + "分" + tStr(leftTime/1000%60) + "秒";
+				document.getElementById("time").innerHTML = Math.floor(leftTime/1000/60/60/24) + "天" + tStr(leftTime/1000/60/60%24) + "时" + tStr(leftTime/1000/60%60) + "分" + tStr(leftTime/1000%60) + "秒";
 				setTimeout(countTime, 1000);
 			}else{
-				document.getElementById("time").innerHTML = "倒计时已结束";
+				document.getElementById("time").innerHTML = "0天00时00分00秒";
 			}
 		}
 	</script>
 </head >
 <body onload="countTime()">
-	<div style="color:red;text-align:center;z-index: 1;font-size: 5vw">
+	<div style="color:red;text-align:center;z-index: 1;font-size: 11vw">
+		<span id="head"></span>
 		<span id="time"></span>
 	</div>
 </body>
