--- a/CountDown.html
+++ b/CountDown.html
@@ -1,8 +1,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>倒计时</title>
-	<script type="text/javascript">
-		__version__= 1.2;
+</head >
+<body>
+	<div id="box" style="color:red;text-align:center;z-index: 1;font-size: 11vw">
+		<span id="head"></span> <br>
+		<span id="time"></span> <br>
+		<span id="perc"></span>
+	</div>
+	<script>
+		__version__= "1.2.1";
+		
+		//style设置
+		document.getElementById("box").style.display="color:red;text-align:center;z-index: 1;font-size: "+getPar("vw")+"vw";
+		//消息
+		var thing = getPar("th");
+		document.getElementById("head").innerHTML=thing+" 倒计时";
+		//开始时间
+		var start=getPar("st");
+		//截止时间
+		var str=getPar("et");
+		//时间差
+		var startDate = new Date(start);
+		var nowDate = new Date();
+		var endDate = new Date(str);
+		var leftTime = endDate.getTime() - nowDate.getTime();
+		var allTime = endDate.getTime() - startDate.getTime();
+		
+		countTime();
+		var CD=setInterval(function(){countTime()},1000);
 		
 		function getPar(par) {
 			//获取当前URL
@@ -21,28 +47,12 @@
 			}
 			return get_par;
 		}
-		
 		function tStr(str) {
 			var time=Math.floor(str);
 			if(time < 10) return "0"+time;
 			else return time;
 		}
 		function countTime() {
-			//消息
-			var thing = getPar("th");
-			document.getElementById("head").innerHTML=thing+" 倒计时<br>";
-			//开始时间
-			var start=getPar("st"); //2020/02/10 6:50:00
-			//截止时间
-			var str=getPar("et"); //2020/06/29 6:50:00
-			//时间差
-			var startDate = new Date(start);
-			var nowDate = new Date();
-			var endDate = new Date(str);
-			var leftTime = endDate.getTime() - nowDate.getTime();
-			var allTime = endDate.getTime() - startDate.getTime();
-			//定义变量 d,h,m,s保存倒计时的时间
-			var d,h,m,s;
 			if (leftTime>=0) {
 				//将倒计时赋值到div中
 				document.getElementById("time").innerHTML = Math.floor(leftTime/1000/60/60/24) + "天" + tStr(leftTime/1000/60/60%24) + "时" + tStr(leftTime/1000/60%60) + "分" + tStr(leftTime/1000%60) + "秒";
@@ -54,12 +64,5 @@
 			}
 		}
 	</script>
-</head >
-<body onload="countTime()">
-	<div style="color:red;text-align:center;z-index: 1;font-size: 11vw">
-		<span id="head"></span>
-		<span id="time"></span>
-		<span id="perc"></span>
-	</div>
 </body>
 </html>
