--- a/CountDown.html
+++ b/CountDown.html
@@ -3,16 +3,16 @@
 	<title>倒计时</title>
 </head >
 <body>
-	<div id="box" style="color:red;text-align:center;z-index: 1;font-size: 11vw">
-		<span id="head"></span> <br>
-		<span id="time"></span> <br>
+	<div id="box" style="color:red;text-align:center;z-index: 1;font-size:10vw;">
+		<span id="head"></span><br>
+		<span id="time"></span><br>
 		<span id="perc"></span>
 	</div>
 	<script>
-		__version__= "1.2.1";
+		__version__= "1.2.2";
 		
 		//style设置
-		document.getElementById("box").style.display="color:red;text-align:center;z-index: 1;font-size: "+getPar("vw")+"vw";
+		document.getElementById("box").style['font-size']=getPar("vw")+"vw";
 		//消息
 		var thing = getPar("th");
 		document.getElementById("head").innerHTML=thing+" 倒计时";
@@ -20,15 +20,9 @@
 		var start=getPar("st");
 		//截止时间
 		var str=getPar("et");
-		//时间差
-		var startDate = new Date(start);
-		var nowDate = new Date();
-		var endDate = new Date(str);
-		var leftTime = endDate.getTime() - nowDate.getTime();
-		var allTime = endDate.getTime() - startDate.getTime();
 		
 		countTime();
-		var CD=setInterval(function(){countTime()},1000);
+		setInterval(countTime,1000);
 		
 		function getPar(par) {
 			//获取当前URL
@@ -53,11 +47,17 @@
 			else return time;
 		}
 		function countTime() {
+			//时间差
+			var startDate = new Date(start);
+			var nowDate = new Date();
+			var endDate = new Date(str);
+			var leftTime = endDate.getTime() - nowDate.getTime();
+			var allTime = endDate.getTime() - startDate.getTime();
+		
 			if (leftTime>=0) {
 				//将倒计时赋值到div中
 				document.getElementById("time").innerHTML = Math.floor(leftTime/1000/60/60/24) + "天" + tStr(leftTime/1000/60/60%24) + "时" + tStr(leftTime/1000/60%60) + "分" + tStr(leftTime/1000%60) + "秒";
 				document.getElementById("perc").innerHTML = "剩余"+Math.floor(leftTime/allTime*Math.pow(10,8))/Math.pow(10,6) + "%";
-				setTimeout(countTime, 1000);
 			}else{
 				document.getElementById("time").innerHTML = "0天00时00分00秒";
 				document.getElementById("perc").innerHTML = "剩余 0%";
