--- a/CD.html
+++ b/CD.html
@@ -1,69 +1,1 @@
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-	<title>倒计时</title>
-</head >
-<body>
-	<div id="box" style="color:red;text-align:center;z-index: 1;font-size:10vw;">
-		<span id="head"></span><br>
-		<span id="time"></span><br>
-		<span id="perc"></span>
-	</div>
-	<script>
-		__version__= "1.2.2";
-		
-		//style设置
-		document.getElementById("box").style['font-size']=getPar("vw")+"vw";
-		//消息
-		var thing = getPar("th");
-		document.getElementById("head").innerHTML=thing+" 倒计时";
-		//开始时间
-		var start=getPar("st");
-		//截止时间
-		var str=getPar("et");
-		
-		countTime();
-		setInterval(countTime,1000);
-		
-		function getPar(par) {
-			//获取当前URL
-			var local_url = decodeURIComponent(document.location.href);
-			//获取要取得的get参数位置
-			var get = local_url.indexOf(par + "=");
-			if(get == -1) {
-				return "";
-			}
-			//截取字符串
-			var get_par = local_url.slice(par.length + get + 1);
-			//判断截取后的字符串是否还有其他get参数
-			var nextPar = get_par.indexOf("&");
-			if(nextPar != -1) {
-				get_par = get_par.slice(0, nextPar);
-			}
-			return get_par;
-		}
-		function tStr(str) {
-			var time=Math.floor(str);
-			if(time < 10) return "0"+time;
-			else return time;
-		}
-		function countTime() {
-			//时间差
-			var startDate = new Date(start);
-			var nowDate = new Date();
-			var endDate = new Date(str);
-			var leftTime = endDate.getTime() - nowDate.getTime();
-			var allTime = endDate.getTime() - startDate.getTime();
-		
-			if (leftTime>=0) {
-				//将倒计时赋值到div中
-				document.getElementById("time").innerHTML = Math.floor(leftTime/1000/60/60/24) + "天" + tStr(leftTime/1000/60/60%24) + "时" + tStr(leftTime/1000/60%60) + "分" + tStr(leftTime/1000%60) + "秒";
-				document.getElementById("perc").innerHTML = "剩余"+Math.floor(leftTime/allTime*Math.pow(10,8))/Math.pow(10,6) + "%";
-			}else{
-				document.getElementById("time").innerHTML = "0天00时00分00秒";
-				document.getElementById("perc").innerHTML = "剩余 0%";
-			}
-		}
-	</script>
-</body>
-</html>
+<html><head><meta charset='UTF-8'><meta name='viewport'content='width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'/><title>倒计时</title></head><body><div id='box'style='color: red;text-align: center;z-index: 1;font-size: 10vw;'><span id='head'></span><br><span id='time'></span><br><span id='perc'></span></div><script>eval(function(p,a,c,k,e,r){e=function(c){return(c<62?'':e(parseInt(c/62)))+((c=c%62)>35?String.fromCharCode(c+29):c.toString(36))};if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[3579a-zA-I]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('__version__=\'1.2.4\';m c(n){3 o=decodeURIComponent(5.location.href);3 p=o.y(n+\'=\');h(p==-1){i\'\'}3 d=o.z(n.length+p+1);3 q=d.y(\'&\');h(q!=-1){d=d.z(0,q)}i d}5.a(\'box\').style[\'font-size\']=c(\'A\')+\'A\';5.a(\'head\').e=c(\'th\')+\' 倒计时\';3 B=c(\'st\');3 j=c(\'et\');r();setInterval(r,f);m k(j){3 b=g.s(j);h(b<t)i\'0\'+b;C i b}m r(){3 D=u v(B);3 E=u v();3 w=u v(j);3 7=w.l()-E.l();3 F=w.l()-D.l();h(7>=0){5.a(\'b\').e=g.s(7/f/9/9/G)+\'天\'+k(7/f/9/9%G)+\'时\'+k(7/f/9%9)+\'分\'+k(7/f%9)+\'秒\';5.a(\'H\').e=\'剩余\'+g.s(7/F*g.I(t,8))/g.I(t,6)+\'%\'}C{5.a(\'b\').e=\'0天x时x分x秒\';5.a(\'H\').e=\'剩余 0%\'}}',[],45,'|||var||document||leftTime||60|getElementById|time|getPar|get_par|innerHTML|1000|Math|if|return|str|tStr|getTime|function|par|local_url|get|nextPar|countTime|floor|10|new|Date|endDate|00|indexOf|slice|vw|start|else|startDate|nowDate|allTime|24|perc|pow'.split('|'),0,{}))</script><div style='left: 0;position: fixed;bottom: 0;width: 100%;z-index: 100;text-align: center;color: rgba(0,0,0,0.3)'>作者YSChain</div></body></html>
