--- a/CodeRain.html
+++ b/CodeRain.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html>
 <head>
 	<meta charset="UTF-8">
 	<title>Code Rain - YSChain</title>
@@ -14,7 +14,7 @@
 	var canvas = document.getElementById('canvas');
 	var ctx = canvas.getContext('2d');
 
-	canvas.height = window.innerHeight - 4; //边界处理
+	canvas.height = window.innerHeight;
 	canvas.width = window.innerWidth;
 
 	var texts = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzāáǎàōóǒòēéěèīíǐìūúǔùǖǘǚǜüêɑńňɡåàáâãèéêëðìíîïöøòóôõñùúûüýþ'.split('');
