--- a/CD.html
+++ b/CD.html
@@ -12,7 +12,6 @@
 	</div>
 	<script>
 		__version__= '1.3.0';
-		watermark();
 
 		function getPar(par) {
 			//获取当前URL
@@ -31,6 +30,8 @@
 			}
 			return get_par;
 		}
+
+		if(getPar('wm') == 1) watermark();
 
 		//style设置
 		document.getElementById('box').style['font-size']=getPar('vw')+'vw';
